gke/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api # ここの名前でpod内でアクセスできるようになる
  labels:
    app: api
spec:
  selector:
    app: api # deploymentの名前と一致させる必要がある
  ports:
    - name: http
      # port: 8080
      port: 80
      targetPort: 8080
  # type: NodePort # ingrees用

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api 
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: asia.gcr.io/gke-test-235823/api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
