gke/web_angular.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-angular
  labels:
    app: web-angular
spec:
  selector:
    app: web-angular
  ports:
    - name: http
      port: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-angular 
  labels:
    name: web-angular
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-angular
  template:
    metadata:
      labels:
        app: web-angular
    spec:
      containers:
      - name: web-angular
        image: asia.gcr.io/gke-test-235823/web-angular:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
