gke/web_go.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-go
  labels:
    app: web-go
spec:
  selector:
    app: web-go
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-go 
  labels:
    name: web-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-go
  template:
    metadata:
      labels:
        app: web-go
    spec:
      containers:
      - name: web-go
        image: asia.gcr.io/gke-test-235823/web-go:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
