gke/web_static.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-static
  labels:
    app: web-static
spec:
  selector:
    app: web-static
  ports:
    - name: http
      port: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-static 
  labels:
    name: web-static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-static
  template:
    metadata:
      labels:
        app: web-static
    spec:
      containers:
      - name: web-static
        image: asia.gcr.io/gke-test-235823/web-static:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
