gke/ingress_angular.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-angular
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-angular 
          servicePort: 80
