gke/ingress_go.yaml
# テスト用にapiコンテナに直接アクセスするためのIngress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-go
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-go 
          servicePort: 80
