gke/ingress_nuxt.yaml
# テスト用にapiコンテナに直接アクセスするためのIngress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nuxt
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-nuxt
          servicePort: 80
