gke/ingress_static.yaml
# テスト用にapiコンテナに直接アクセスするためのIngress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-static
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-static 
          servicePort: 80
